fix: rebranding logo spacing (#1516)
* fix: rebranding logo spacing

* min navbar height 80

--- a/portal/static/portal/sass/modules/_homepage_constants.scss
+++ b/portal/static/portal/sass/modules/_homepage_constants.scss
@@ -1,6 +1,2 @@
 $menu-height: 100px;
-$menu-height-sm: 90px;
 $menu-height-xs: 80px;
-$cfl-logo-height: 90px;
-$cfl-logo-height-md: 78px;
-$cfl-logo-height-sm: 60px;
